Allow drag on caption area of chrome app window.

Bug: 881642
Change-Id: I3c1f72a6a2c39c86de60ab7132b2384ddcfa1ca4
Reviewed-on: https://chromium-review.googlesource.com/1211371
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589587}
Former-commit-id: 851d624801624f91356f6b879fbdb0d60ec05ae6