ash/wm/splitview/split_view_controller_unittest.cc
@@ -1624,13 +1624,14 @@ class SplitViewTabDraggingTest : public SplitViewControllerTest {
   ~SplitViewTabDraggingTest() override = default;
 
  protected:
-  aura::Window* CreateBrowserTypeWindow(
+  aura::Window* CreateWindowWithType(
       const gfx::Rect& bounds,
-      aura::client::WindowType type = aura::client::WINDOW_TYPE_NORMAL) {
+      AppType app_type,
+      aura::client::WindowType window_type = aura::client::WINDOW_TYPE_NORMAL) {
     aura::Window* window = CreateTestWindowInShellWithDelegateAndType(
-        new SplitViewTestWindowDelegate, type, -1, bounds);
-    window->SetProperty(aura::client::kAppType,
-                        static_cast<int>(AppType::BROWSER));
+        new SplitViewTestWindowDelegate, window_type, -1, bounds);
+    window->SetProperty(aura::client::kAppType, static_cast<int>(app_type));
+    wm::GetWindowState(window)->Maximize();
     return window;
   }
 
@@ -1735,12 +1736,17 @@ class SplitViewTabDraggingTest : public SplitViewControllerTest {
   DISALLOW_COPY_AND_ASSIGN(SplitViewTabDraggingTest);
 };
 
-// Test that in tablet mode, we only allow dragging on browser window's caption
-// area.
-TEST_F(SplitViewTabDraggingTest, OnlyAllowDraggingOnBrowserWindow) {
+// Test that in tablet mode, we only allow dragging on browser or chrome app
+// window's caption area.
+TEST_F(SplitViewTabDraggingTest, OnlyAllowDraggingOnBrowserOrChromeAppWindow) {
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window1(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window2(CreateWindow(bounds));
+  std::unique_ptr<aura::Window> window1(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window2(
+      CreateWindowWithType(bounds, AppType::CHROME_APP));
+  std::unique_ptr<aura::Window> window3(CreateWindow(bounds));
+  std::unique_ptr<aura::Window> window4(
+      CreateWindowWithType(bounds, AppType::ARC_APP));
 
   std::unique_ptr<WindowResizer> resizer =
       CreateResizerForTest(window1.get(), gfx::Point(), HTCAPTION);
@@ -1749,6 +1755,14 @@ TEST_F(SplitViewTabDraggingTest, OnlyAllowDraggingOnBrowserWindow) {
   resizer.reset();
 
   resizer = CreateResizerForTest(window2.get(), gfx::Point(), HTCAPTION);
+  EXPECT_TRUE(resizer.get());
+  resizer->CompleteDrag();
+  resizer.reset();
+
+  resizer = CreateResizerForTest(window3.get(), gfx::Point(), HTCAPTION);
+  EXPECT_FALSE(resizer.get());
+
+  resizer = CreateResizerForTest(window4.get(), gfx::Point(), HTCAPTION);
   EXPECT_FALSE(resizer.get());
 }
 
@@ -1756,7 +1770,8 @@ TEST_F(SplitViewTabDraggingTest, OnlyAllowDraggingOnBrowserWindow) {
 // caption or top area.
 TEST_F(SplitViewTabDraggingTest, OnlyAllowDraggingOnCaptionOrTopArea) {
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window(
+      CreateWindowWithType(bounds, AppType::BROWSER));
 
   // Only dragging on HTCAPTION or HTTOP area is allowed.
   std::unique_ptr<WindowResizer> resizer =
@@ -1792,7 +1807,8 @@ TEST_F(SplitViewTabDraggingTest, OnlyAllowDraggingOnCaptionOrTopArea) {
 // cursor should be properly locked.
 TEST_F(SplitViewTabDraggingTest, LockCursor) {
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window(
+      CreateWindowWithType(bounds, AppType::BROWSER));
   SetIsInTabDragging(window.get(), /*is_dragging=*/true);
   EXPECT_FALSE(Shell::Get()->cursor_manager()->IsCursorLocked());
 
@@ -1810,7 +1826,8 @@ TEST_F(SplitViewTabDraggingTest, LockCursor) {
 // backdrop is disabled during dragging process.
 TEST_F(SplitViewTabDraggingTest, NoBackDropDuringDragging) {
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window(
+      CreateWindowWithType(bounds, AppType::BROWSER));
   EXPECT_EQ(window->GetProperty(kBackdropWindowMode),
             BackdropWindowMode::kAuto);
 
@@ -1833,8 +1850,10 @@ TEST_F(SplitViewTabDraggingTest, NoBackDropDuringDragging) {
 // not be shown in overview mode.
 TEST_F(SplitViewTabDraggingTest, DoNotShowDraggedWindowInOverview) {
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window1(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window2(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window1(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window2(
+      CreateWindowWithType(bounds, AppType::BROWSER));
 
   Shell::Get()->window_selector_controller()->ToggleOverview();
   EXPECT_TRUE(Shell::Get()->window_selector_controller()->IsSelecting());
@@ -1863,8 +1882,10 @@ TEST_F(SplitViewTabDraggingTest, DoNotShowDraggedWindowInOverview) {
 // below the current dragged window.
 TEST_F(SplitViewTabDraggingTest, DividerIsBelowDraggedWindow) {
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window1(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window2(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window1(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window2(
+      CreateWindowWithType(bounds, AppType::BROWSER));
 
   split_view_controller()->SnapWindow(window1.get(), SplitViewController::LEFT);
   split_view_controller()->SnapWindow(window2.get(),
@@ -1890,8 +1911,10 @@ TEST_F(SplitViewTabDraggingTest, DividerIsBelowDraggedWindow) {
 TEST_F(SplitViewTabDraggingTest, DragMaximizedWindow) {
   UpdateDisplay("600x600");
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window1(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window2(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window1(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window2(
+      CreateWindowWithType(bounds, AppType::BROWSER));
   wm::GetWindowState(window1.get())->Maximize();
   wm::GetWindowState(window2.get())->Maximize();
   EXPECT_TRUE(wm::GetWindowState(window1.get())->IsMaximized());
@@ -2015,9 +2038,12 @@ TEST_F(SplitViewTabDraggingTest, DragMaximizedWindow) {
 TEST_F(SplitViewTabDraggingTest, DragSnappedWindow) {
   UpdateDisplay("600x600");
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window1(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window2(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window3(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window1(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window2(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window3(
+      CreateWindowWithType(bounds, AppType::BROWSER));
 
   split_view_controller()->SnapWindow(window1.get(), SplitViewController::LEFT);
   split_view_controller()->SnapWindow(window2.get(),
@@ -2091,7 +2117,7 @@ TEST_F(SplitViewTabDraggingTest, DragSnappedWindow) {
   EXPECT_TRUE(Shell::Get()->window_selector_controller()->IsSelecting());
 
   // Recreate |window1| and snap it to test the following senarioes.
-  window1.reset(CreateBrowserTypeWindow(bounds));
+  window1.reset(CreateWindowWithType(bounds, AppType::BROWSER));
   split_view_controller()->SnapWindow(window1.get(),
                                       SplitViewController::RIGHT);
   EXPECT_EQ(split_view_controller()->state(),
@@ -2160,9 +2186,12 @@ TEST_F(SplitViewTabDraggingTest, DragSnappedWindow) {
 TEST_F(SplitViewTabDraggingTest, DragSnappedWindowWhileOverviewOpen) {
   UpdateDisplay("600x600");
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window1(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window2(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window3(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window1(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window2(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window3(
+      CreateWindowWithType(bounds, AppType::BROWSER));
 
   // Prepare the testing senario:
   split_view_controller()->SnapWindow(window1.get(), SplitViewController::LEFT);
@@ -2281,9 +2310,12 @@ TEST_F(SplitViewTabDraggingTest, DragSnappedWindowWhileOverviewOpen) {
 // the drag ends.
 TEST_F(SplitViewTabDraggingTest, ShowNewWindowItemWhenDragStarts) {
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window1(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window2(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window3(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window1(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window2(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window3(
+      CreateWindowWithType(bounds, AppType::BROWSER));
 
   split_view_controller()->SnapWindow(window1.get(), SplitViewController::LEFT);
   split_view_controller()->SnapWindow(window2.get(),
@@ -2339,9 +2371,12 @@ TEST_F(SplitViewTabDraggingTest, ShowNewWindowItemWhenDragStarts) {
 // should not do animation when exiting overview.
 TEST_F(SplitViewTabDraggingTest, OverviewExitAnimationTest) {
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window1(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window2(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window3(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window1(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window2(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window3(
+      CreateWindowWithType(bounds, AppType::BROWSER));
   std::unique_ptr<OverviewStatesObserver> overview_observer =
       std::make_unique<OverviewStatesObserver>(window1->GetRootWindow());
 
@@ -2397,7 +2432,8 @@ TEST_F(SplitViewTabDraggingTest, DragIndicatorsInPortraitOrientationTest) {
             OrientationLockType::kLandscapePrimary);
 
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window(
+      CreateWindowWithType(bounds, AppType::BROWSER));
   wm::GetWindowState(window.get())->Maximize();
   EXPECT_TRUE(wm::GetWindowState(window.get())->IsMaximized());
   std::unique_ptr<WindowResizer> resizer =
@@ -2430,9 +2466,12 @@ TEST_F(SplitViewTabDraggingTest, DragIndicatorsInPortraitOrientationTest) {
 // should be adjusted accordingly.
 TEST_F(SplitViewTabDraggingTest, AdjustOverviewBoundsDuringDragging) {
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window1(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window2(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window3(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window1(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window2(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window3(
+      CreateWindowWithType(bounds, AppType::BROWSER));
 
   WindowSelectorController* selector_controller =
       Shell::Get()->window_selector_controller();
@@ -2566,7 +2605,8 @@ TEST_F(SplitViewTabDraggingTest, AdjustOverviewBoundsDuringDragging) {
 // the new selector item to add into overview.
 TEST_F(SplitViewTabDraggingTest, WindowBoundsUpdatedBeforeAddingToOverview) {
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window1(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window1(
+      CreateWindowWithType(bounds, AppType::BROWSER));
   gfx::Rect tablet_mode_bounds = window1->bounds();
   EXPECT_NE(bounds, tablet_mode_bounds);
 
@@ -2633,7 +2673,8 @@ TEST_F(SplitViewTabDraggingTest, WindowBoundsUpdatedBeforeAddingToOverview) {
 // in overview.
 TEST_F(SplitViewTabDraggingTest, DropWindowIntoOverviewOnDragPositionTest) {
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window1(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window1(
+      CreateWindowWithType(bounds, AppType::BROWSER));
   wm::GetWindowState(window1.get())->Maximize();
   std::unique_ptr<WindowResizer> resizer =
       StartDrag(window1.get(), window1.get());
@@ -2680,7 +2721,8 @@ TEST_F(SplitViewTabDraggingTest, DropWindowIntoOverviewOnDragPositionTest) {
 
   // Should not consider the drag position if splitview is active. Window should
   // still back to be snapped.
-  std::unique_ptr<aura::Window> window2(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window2(
+      CreateWindowWithType(bounds, AppType::BROWSER));
   split_view_controller()->SnapWindow(window2.get(),
                                       SplitViewController::RIGHT);
   EXPECT_EQ(SplitViewController::BOTH_SNAPPED,
@@ -2699,8 +2741,10 @@ TEST_F(SplitViewTabDraggingTest, DropWindowIntoOverviewOnDragPositionTest) {
 // dragging.
 TEST_F(SplitViewTabDraggingTest, DraggedWindowShouldHaveActiveWindowShadow) {
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window1(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window2(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window1(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window2(
+      CreateWindowWithType(bounds, AppType::BROWSER));
   wm::ActivateWindow(window1.get());
   wm::ActivateWindow(window2.get());
   window1->SetProperty(aura::client::kShowStateKey, ui::SHOW_STATE_MAXIMIZED);
@@ -2741,10 +2785,14 @@ TEST_F(SplitViewTabDraggingTest, DraggedWindowShouldHaveActiveWindowShadow) {
 // visibility should change accordingly.
 TEST_F(SplitViewTabDraggingTest, SourceWindowBackgroundTest) {
   const gfx::Rect bounds(0, 0, 400, 400);
-  std::unique_ptr<aura::Window> window1(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window2(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window3(CreateBrowserTypeWindow(bounds));
-  std::unique_ptr<aura::Window> window4(CreateBrowserTypeWindow(bounds));
+  std::unique_ptr<aura::Window> window1(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window2(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window3(
+      CreateWindowWithType(bounds, AppType::BROWSER));
+  std::unique_ptr<aura::Window> window4(
+      CreateWindowWithType(bounds, AppType::BROWSER));
   EXPECT_TRUE(window1->IsVisible());
   EXPECT_TRUE(window2->IsVisible());
   EXPECT_TRUE(window3->IsVisible());
